<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<FrameLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            tools:background="@drawable/login_bg">

            <ImageView
                android:id="@+id/logo_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp32"
                app:srcCompat="@drawable/ic_nrc_logo_white_small" />

            <com.spade.nrc.ui.CustomViews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/dp32"
                android:gravity="center"
                android:text="@string/welcome_to_nrc"
                android:textAllCaps="true"
                android:textSize="@dimen/material_text_title"
                app:color="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/email_address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/activity_vertical_margin"
                    android:textAppearance="@style/TextAppearance"
                    android:textColor="@color/white"
                    android:textColorHint="@color/opacity_white"
                    android:theme="@style/EditTextTheme" />

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/activity_vertical_margin"
                    android:textAppearance="@style/TextAppearance"
                    android:textColor="@color/white"
                    android:textColorHint="@color/opacity_white"
                    android:theme="@style/EditTextTheme" />

                <TextView
                    android:id="@+id/forget_password_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:text="@string/forget_password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/material_text_caption" />
            </LinearLayout>

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp32"
                android:layout_marginStart="@dimen/dp32"
                android:background="@drawable/nrc_bordered_btton_background"
                android:gravity="center"
                android:paddingBottom="@dimen/dp8"
                android:paddingTop="@dimen/dp8"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="gone" />

            <com.spade.nrc.ui.CustomViews.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/login_with"
                app:color="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/dp32"
                android:layout_marginStart="@dimen/dp32"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/loginWithFacebookBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp8"
                    android:layout_weight="1"
                    android:background="@drawable/bordered_btton_background"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp8"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/dp8"
                    android:text="@string/facebook"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/loginWithGoogleBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp8"
                    android:layout_weight="1"
                    android:background="@drawable/bordered_btton_background"
                    android:gravity="center"
                    android:paddingBottom="@dimen/dp8"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/dp8"
                    android:text="@string/google"
                    android:textColor="@color/white" />

            </LinearLayout>

            <TextView
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/dp32"
                android:layout_marginStart="@dimen/dp32"
                android:background="@drawable/nrc_bordered_btton_background"
                android:gravity="center"
                android:paddingBottom="@dimen/dp8"
                android:paddingTop="@dimen/dp8"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginAsGuestBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp32"
                android:layout_marginStart="@dimen/dp32"
                android:gravity="center"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="@dimen/material_text_subhead"
                android:textStyle="bold" />
        </LinearLayout>
        <!--</FrameLayout>-->
    </ScrollView>
</FrameLayout>