<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:id="@+id/user_data_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/show_item_height">

                <ImageView
                    android:id="@+id/profile_image_background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/nrc_gradient"
                    android:scaleType="centerCrop" />

                <FrameLayout
                    android:id="@+id/profile_image_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="?attr/actionBarSize">

                    <ImageView
                        android:layout_width="@dimen/present_background_circle_image"
                        android:layout_height="@dimen/present_background_circle_image"
                        android:background="@drawable/nrc_gradient_circle" />

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="@dimen/present_circle_image"
                        android:layout_height="@dimen/present_circle_image"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_profile_default" />
                </FrameLayout>

                <TextView
                    android:id="@+id/change_picture_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/profile_image_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:drawablePadding="@dimen/dp8"
                    android:drawableStart="@drawable/ic_changepicture"
                    android:gravity="center"
                    android:src="@drawable/ic_profile_default"
                    android:text="@string/change_picture"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_arrow_left" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_toEndOf="@id/back_button"
                        android:layout_toStartOf="@id/save_btn"
                        android:gravity="center"
                        android:src="@drawable/ic_profile_default"
                        android:text="@string/edit_profile"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="@dimen/material_text_title"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/save_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/activity_vertical_margin"
                        android:text="@string/save"
                        android:textColor="@color/white" />
                </RelativeLayout>
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:hint="@string/first_name"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />

                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:hint="@string/last_name"
                    android:paddingEnd="@dimen/activity_vertical_margin"
                    android:paddingStart="@dimen/activity_vertical_margin"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black" />
            </LinearLayout>


            <EditText
                android:id="@+id/email_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:gravity="start"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />

            <EditText
                android:id="@+id/phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:gravity="start"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingEnd="@dimen/activity_vertical_margin"
                android:paddingStart="@dimen/activity_vertical_margin"
                android:textColor="@color/black"
                android:textColorHint="@color/black" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>